Added Jim's corrections

--- a/theend.tex
+++ b/theend.tex
@@ -1,10 +1,10 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % theend.tex - Ian Huston
-% $Id: theend.tex,v 1.14 2009/11/20 11:33:59 ith Exp $
+% $Id: theend.tex,v 1.15 2009/11/20 14:24:21 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: theend.tex,v 1.14 2009/11/20 11:33:59 ith Exp $}
+{\version$Id: theend.tex,v 1.15 2009/11/20 14:24:21 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -15,22 +15,22 @@
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-As the number of cosmological models grows, the need to constrain them is also
-increasing. At the same time, the quantity and quality of observational data are
-advancing. There now exists the opportunity to go beyond linear statistical analyses
+As the number of viable cosmological models increases, the need to constrain them becomes more
+important. At the same time, the quantity and quality of observational data continues to improve.
+There now exists the opportunity to go beyond linear statistical analyses
 and confront the predictions of models with observational data from the non-linear
-regime. In this thesis both analytic and numerical methods have been used to
+regime. In this thesis both analytic and numerical methods have been developed to
 constrain inflationary models.
 
 The framework used in this thesis is the Friedmann-Robertson-Walker universe,
 reviewed in Chapter~\ref{ch:introduction}. During the accelerated expansion of the
-inflationary period, quantum fluctuations seeded energy density variations which
-gave rise to the diverse structure in the universe. First order
+inflationary period, quantum fluctuations seeded energy density variations, which in turn
+gave rise to the diverse structure of the present universe. First order
 cosmological perturbation theory
 is necessary to describe the evolution of these fluctuations. The main observable
 quantities can be calculated at horizon crossing by using the Bunch-Davies vacuum
 initial conditions. The departure of the perturbations from a purely Gaussian random
-field is parametrised by $\fnl$ which is described in two limits, local and
+field is parametrised by $\fnl$, which is described in two limits, local and
 equilateral. 
 In addition to canonical actions, we also introduced
 non-canonical models, for which the speed of sound of the perturbations plays a
@@ -40,31 +40,32 @@ models is large.
 
 
 % DBI
-In Part~\ref{part:dbi}, analytic methods were used to constrain
+In Part~\ref{part:dbi}, analytic methods were developed to constrain
 string theory inspired non-canonical inflationary models. The Dirac-Born-Infeld
 scenario was
 outlined in Chapter~\ref{ch:dbi-intro}. In this model, a D3-brane propagates in a
 six-dimensional warped throat. The radial position of the brane from the tip of the
 throat assumes the role of the inflaton field. The non-canonical nature of the DBI
-action restricts the kinetic energy of this field no matter how steep the potential
-which enables an inflationary period of sufficient duration to occur.
-This model was widely regarded as a very promising implementation of an inflationary
+action restricts the kinetic energy of this field no matter how steep the potential.
+Thise allows an inflationary period of sufficient duration to occur.
+This model was widely regarded as a very promising realisation of an inflationary
 model in a string-theory context.
 
 In \Rref{bmpaper}, Baumann and McAllister used the Lyth bound \cite{lyth} to limit
-the tensor-scalar ratio based on the conservative assumption that the brane could
+the tensor-scalar ratio. Their analysis was based on the conservative assumption that the brane
+could
 not propagate further than the full length of the throat. In Chapter~\ref{ch:dbi},
 we showed that this bound can be tightened by applying it over the
-portion of the throat which the brane passes through during the directly observable
-e-foldings of inflation. Restricting the field variation to be over these,
-approximately, four e-foldings constrains $r$ to be less than $10^{-7}$ for standard
+portion of the throat through which the brane passes during the directly observable
+stage of inflation. Restricting the field variation to be over these
+approximately four e-foldings constrains $r$ to be less than $10^{-7}$ for standard
 parameter values.
 
 The most optimistic estimates of advances in experimental techniques and data
 analysis, including foreground reduction, indicate that observations of $r>10^{-4}$
-might be achievable \cite{Baumann:2008aq,vpj}. Therefore, the new bound in
+might be achievable in the future \cite{Baumann:2008aq,vpj}. Therefore, the new bound in
 \eq{eq:upperbound} immediately rules out the observation of a tensor mode signal
-from this model in the foreseeable future.
+from this model.
 
 In addition to this, we also derived a lower bound on $r$ in \eq{eq:lowerbound}.
 This depends on observable quantities, namely the scalar spectral index and the
@@ -76,49 +77,50 @@ viable. Numerical simulations by Peiris \etal in \Rref{Peiris:2007gz} have
 demonstrated the lower bound, in the relativistic limit, using the
 Hamiltonian flow approach.
 
-The discovery of the inconsistent bounds for DBI inflation has had a noticeable
+The discovery of these incompatible bounds for DBI inflation has had a noticeable
 impact on the research community, spurring interest in finding models which evade
 these bounds. Many such models have been proposed with varying degrees of success. In
 Section~\ref{sec:others-dbi} these were categorised according to whether they
-featured single or multiple fields and single or multiple branes. 
+featured single or multiple fields, and single or multiple branes. 
 
 In Section~\ref{sec:relaxing-dbi}, a phenomenological approach was taken to easing
-the upper bound. By considering a DBI action with unspecified field functions,
+the upper bound on the tensor-scalar ratio. By considering a DBI-type action with unspecified field
+functions,
 $f_i$, we showed that the generalised lower and upper bounds can be consistent
-if the product of $f_1$ and $f_2$ is large on observable scales.
+if the product of $f_1$ and $f_2$ is sufficiently large on observable scales.
 
 
 % Multi
 More general actions, which relax the bounds on $r$, were derived in
-Chapter~\ref{ch:multibrane}. By retaining the proportionality of $\Lambda$ and
-$c_s^{-2}$, which is present in the DBI model, and requiring that $\fnleq$ is large,
-we found a class of actions similar in form to DBI. 
-Instead of a square-root in the kinetic term, the index of the main term of these
+Chapter~\ref{ch:multibrane}. 
+We found a class of actions similar in form to that of the DBI model. 
+However, instead of a square-root in the kinetic term, the index of the main term of these
 actions depends on the constant of proportionality between $\Lambda$ and the sound
-speed.
+speed of inflaton fluctuations.
 The upper bound on $r$ can be derived for these general actions and when the index
-is below the critical value of $1/2$ of the standard DBI scenario, this bound is
-significantly relaxed. When new models are proposed, the
-phenomenological description of this family of actions allows easy identification of
-those models for which the bound on $r$ is less stringent. 
+is below the critical value of $1/2$ (corresponding to the standard DBI scenario), this bound is
+significantly relaxed.  
+When new models are proposed in the future, our phenomenological derivation of this family of
+actions will allow those models for which the bound on $r$ is less stringent to be easily
+identified.
 
-One proposed, multi brane, single field model is the coincident brane scenario of
+Once such model is the single field, coincident brane scenario of
 Thomas \& Ward \cite{thomasward}. When $n$ D3-branes propagate in a throat, the
 non-Abelian interactions between the branes result in major departures from the
-single brane case. This is in contrast to the non-interacting branes model in which
+single brane case. This is in contrast to the non-interacting branes model, in which
 the total action is simply the sum of copies of the single brane action.
 
 In the limit of a large number of branes being coincident, the effective action is
-similar to $n$ times the single brane one with the addition of a fuzzy potential
-term. The bounds on $r$ can be somewhat relaxed when this potential term is large
-but this model is still strongly constrained by current observations. For an $AdS_5$
-throat, standard parameter choices limit the number of branes in this case to being
-less than 150, at which point the assumption of arbitrarily large $n$ is
+similar to $n$ times the single brane model, with the addition of a fuzzy potential
+term. The bounds on $r$ can be somewhat relaxed when this potential is large,
+but the model is still strongly constrained by current observations. For an $AdS_5$
+throat, standard parameter choices limit the number of allowed branes to be
+less than 150, at which point the assumption of arbitrarily large $n$ becomes
 questionable.
 
 More promising is the finite $n$ limit of the coincident brane model. The
-non-Abelian nature of the interactions leads, in this case, to a recursive definition
-of the $n$-brane action in terms of the $n=2$ one. In
+non-Abelian nature of the interactions leads, in this case, to a recursive relation for
+the $n$-brane action in terms of the $n=2$ one. In
 Section~\ref{sec:finiten-multi} we showed that the action for finite $n$ is one of
 the class of bound-evading actions described above. This identification is possible
 because the last term of the recursive sum dominates in the relativistic limit. This
@@ -127,23 +129,23 @@ branes is kept well under control for this range of $n$.
 
 Although the bounds on $r$ are eased
 for this model, we showed that observations strongly constrain the possibility of
-production of an observable tensor signal. If an observable tensor-scalar ratio is
+an observable tensor signal being generated. If an observable tensor-scalar ratio is
 considered to be $r>10^{-4}$ then only the two or three brane cases are capable of
 producing such a signal. This bound on $n$ depends on the WMAP5 limit on $\fnleq$.
 If, as expected, the observational limits on $\fnleq$ tighten considerably in the
-future, the possibility of an observable tensor signal from the multi coincident
+future, the possibility of an observable tensor signal from the multi-coincident
 brane model could be ruled out.
 
 % Numerical
-In Part~\ref{part:numerical}, numerical methods were used to test inflationary
+In Part~\ref{part:numerical} of this thesis, numerical methods were used to test inflationary
 models up to second order in cosmological perturbation theory. The Klein-Gordon
 equation at second order was derived in \Rref{Malik:2006ir} for the multi-field
 case. In Chapter~\ref{ch:perts}, second order gauge transformations were outlined
-and the KG equation reproduced for a single scalar field model. In contrast to the
+and the Klein-Gordon equation reproduced for a single scalar field model. In contrast to the
 $\Delta \N$ approach, this equation is valid on all scales, both inside and outside
 the horizon. 
 
-In Fourier space, the second order KG equation \eqref{eq:SOKG-real-num} contains a
+In Fourier space, the second order Klein-Gordon equation \eqref{eq:SOKG-real-num} contains a
 convolution term of the first order scalar field perturbation. For this first
 demonstration of the numerical system, a slow roll approximation of the full
 equation was used. 
@@ -151,85 +153,85 @@ equation was used.
 Calculating the second order scalar field perturbations provides the possibility of
 a unique insight into the generation and evolution of non-linear contributions to
 the scalar curvature perturbation. The long term aim of this continuing project is
-to analyse multi-field, non slow roll models in which non-Gaussian effects are
+to analyse multi-field, non-slow roll models, in which non-Gaussian effects are
 expected to play an important role.
 
-As a step towards that goal, we described the implementation of a numerical
+As a step towards this goal, we described the implementation of a numerical
 calculation of the single field, slow roll, second order equation in
 Chapter~\ref{ch:numericalsystem}. The construction and evaluation of the convolved
 source term in \eq{eq:KG2-src-sr-aterms} proved to be the most numerically complex
 step required. 
 
-To allow a numerical calculation an energy scale cutoff must be implemented. We used
+To allow a numerical calculation, an energy scale cutoff must be implemented. We used
 a sharp cutoff at small wavenumbers below which the perturbations were taken to be
-identically zero. Another cutoff at small scales or large wavenumbers was dictated
-by practical reasons of calculation size and computation time.
+identically zero. Another cutoff at small scales (or equivalently large wavenumbers) was dictated
+by practical considerations of calculation size and computation time.
 
 We defined, in \eq{eq:AtoD-num}, four $\theta$ dependent integrals
 into which the convolution term can be decomposed. By comparison with an analytic
 solution for a particular smooth choice of the first order perturbation, an estimate
-was made of the relative error present in the integration of one of these terms. The
+was made of the relative error present in the integration of each term. The
 number of discrete wavenumber values, their spacing, and the number of discrete
-$\theta$ values were chosen to minimise this error. From these values, three
-different closed finite ranges of discrete values of the wavenumber were defined.
+$\theta$ values were chosen to minimise the error in one of these. From these values, three
+different finite ranges of discrete values of the wavenumber were defined.
 These all contain the WMAP pivot scale at $\kwmap=0.002\Mpc^{-1}$ and cover the
 WMAP observed scales to varying degrees.
 % 
-The other $\theta$ dependent terms have small relative errors for the three chosen
+The three other $\theta$ dependent terms have small relative errors for the chosen
 ranges. 
 
 
 
 The execution of the code is in four stages, building on previous calculations of
-first order perturbations in Refs.~\cite{Martin:2006rs, Ringeval:2007am} and
-\cite{Salopek:1988qh}. Despite the large volume of calculations required at each
+first order perturbations in Refs.~\cite{Martin:2006rs, Ringeval:2007am, Salopek:1988qh}. Despite
+the large volume of calculations required at each
 time step, the easily parallelisable nature of the source term calculations allows
 the run time to be reduced significantly.
 
 
 To test the code, four different, large field, monomial potentials were used. Each
-one depends on a single parameter which was fixed by comparing the resultant scalar
-curvature power spectrum with the WMAP5 normalisation value. The slow roll
-approximation can be applied to all four of the potentials.
+potential depends on a single parameter, which was fixed by comparing the resultant scalar
+curvature power spectrum with the WMAP5 normalisation. The slow roll
+approximation can be applied to all four potentials.
 
 We presented the results for each potential in Chapter~\ref{ch:results}. The first
-order results match those in Refs.~\cite{Martin:2006rs, Ringeval:2007am} and
-\cite{Salopek:1988qh}. The results of the source term calculation show that before
+order results match those in Refs.~\cite{Martin:2006rs, Ringeval:2007am, Salopek:1988qh}. The
+results of the source term calculation show that before
 horizon crossing, the source term amplitude decays rapidly for all four potentials.
-After horizon crossing it becomes steadier and eventually increase at later times,
-when the slow roll approximation breaks down.
+The amplitude changes less after horizon crossing, until later times when it increases
+as the slow roll approximation breaks down.
 
 The choice of wavenumber range affects the amplitude of the source term, as
 expected, due to the implementation of a sharp cutoff at large scales. This
 dependence is only apparent, however, before horizon crossing. For a particular
-range, as wavenumber increase, the magnitude of the source term decreases. However,
-the ratio of the source term to other terms in the KG equation increases with
+range,  the magnitude of the source term decreases as wavenumber increase. However,
+the ratio of the source term to the other terms in the Klein-Gordon equation increases with
 wavenumber. 
 
-As expected the amplitude of the second order scalar perturbations is much smaller
+As expected, the amplitude of the second order scalar perturbations is much smaller
 than that of the first order ones. After the generation of the second order
 perturbations at early times, their evolution is that of a damped harmonic
 oscillator similar to the first order evolution.
 
 
 The numerical calculation described is the first step towards a system capable of
-handling the multi field, non slow roll models for which non-linear contributions
+handling the multi-field, non-slow roll models, for which non-linear contributions
 are important. In Section~\ref{sec:next-res}, the next steps towards this goal were
-outlined. The full single field, non slow roll equation can be treated using the
+outlined. The full single field, non-slow roll equation can be treated using the
 method already described. Three more $\theta$ dependent terms are necessary to
 compute the full convolution integral in this case. 
 
-The KG equation for the multi field case introduces further complexity. We plan to
+The Klein-Gordon equation for the multi-field case introduces further complexity. We plan to
 expand the numerical system to encompass two or three scalar fields. The differences
-between single and multi field models are already apparent for these cases. We have
+between single and multi-field models are already apparent for these cases. We have
 presented the slow roll source term equation for multiple fields in vector notation.
 The definitions of the four $\theta$ dependent terms used in the single
-field slow roll model can be extended to the multi field case. 
+field slow roll model were also extended to the multi-field case. 
 
 
-To conclude, it is worth reiterating the opening remarks. Cosmology has moved from
-being a theorists' playground to an observational crucible. Inflationary models can
+To conclude, it is worth reiterating our opening remarks. Cosmology has moved from
+being a theorists' playground to a genuine scientific discipline. Inflationary models can
 now be strongly tested by observations and the next generation of experiments will
-place even tighter limits on the viable parameter space. In this thesis, analytic
+place even tighter limits on the viable parameter space of such models. In this thesis, analytic
 arguments have constrained string theory inspired inflationary models and numerical
 methods have paved the way to calculating higher order cosmological perturbations.
