Added Jim's corrections

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.62 2009/11/10 12:02:23 ith Exp $
+% $Id: dbi.tex,v 1.63 2009/11/20 14:35:17 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.62 2009/11/10 12:02:23 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.63 2009/11/20 14:35:17 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -975,7 +975,7 @@ each category.
 
 The most straightforward extensions of the DBI model are single field, single brane
 models. 
-These have a single degree of freedom, as the D3-brane model does, but
+These have a single degree of freedom, as in the D3-brane model, but
 they rely on other physical mechanisms to ease the bounds on $r$.
 A natural extension to the single ${\rm D3}$-brane model 
 is to consider a ${\rm D}p$-brane wrapped around a $(p-3)$-cycle of the 
@@ -984,7 +984,7 @@ This leads to a change in the relationship
 between $\rho$ and $\vp$ from that defined in Section~\ref{sec:dbiinflation}
 \cite{Kobayashi:2007hm, Becker:2007ui, Ward:2007gs}.  
 For example, Becker \etal \cite{Becker:2007ui} 
-have proposed a model in which inflation is driven by a warped ${\rm D5}$-brane. 
+have proposed a model in which inflation is driven by a wrapped ${\rm D5}$-brane. 
 In this case, the range of allowed values for the inflaton 
 becomes independent of the throat charge, $N$, which weakens the upper bound on 
 the tensor-scalar ratio to $r \lesssim 0.04$. (Strictly speaking there is a weak
@@ -999,11 +999,11 @@ required an excessively large background charge in
 order to relax the bounds on $r$. 
 % 
 This requirement is highly constraining, but is
-still not as restrictive as the charge required by the single brane scenario,
-which effectively rules that out as a predictive model. 
+still not as restrictive as the value of the charge required by the single brane scenario,
+which effectively rules this model out. 
 % 
 Thus, a wrapped brane configuration is preferable to
-the single D3-brane model but the parameter space of the former is still severely
+the single D3-brane model, but the parameter space of the former is still severely
 limited by the WMAP5 observations \cite{Alabidi:2008ej}. 
 % However
 % the difficulty in these models is that the backreaction is no longer under
@@ -1018,12 +1018,12 @@ standard DBI model with non-parallel branes. In general, the model describes the
 physics of a single brane with multiple position fields and multiple Wilson line
 fields.
 % 
-However, in \Rref{Avgoustidis:2008zu} observational predictions were derived for
+In \Rref{Avgoustidis:2008zu}, observational predictions were derived for
 the case when the brane position is fixed and only one Wilson line degree of freedom
-is used. This implementation is, therefore, a single brane, single field model.
+is used. This implementation is therefore a single brane, single field model.
 % 
-By following the method in Section~\ref{sec:upper-dbi} for this single field model,
-a lower bound on $r$ is derived, instead of the upper bound \eqref{eq:upperbound}
+By following the method outlined in Section~\ref{sec:upper-dbi} for this single field model,
+a lower bound on $r$ was derived, instead of the upper bound \eqref{eq:upperbound}
 \cite{Avgoustidis:2008zu}. The lower bound \eqref{eq:lowerbound} remains valid for
 this scenario. 
 % 
@@ -1032,43 +1032,43 @@ standard DBI model is not replicated.
  
 
 
-Changing the physical setting can also allow larger field ranges which can relax the
-bounds on $r$. One example is the case of D4-branes in compactified manifolds
+Changing the physical setting can also allow larger field ranges, which in turn can relax the
+bounds on $r$. One such example is the case of a D4-brane in compactified manifolds
 containing monodromies. 
 The large field variations in this single brane, single field model lead to possibly
 observable
 tensor modes
 \cite{Silverstein:2008sg}. Although formulated in Type IIA string theory, the
-monodromy model has a simple inflationary interpretation as a large field, slow roll
-model with the potential $V(\vp)=\vp^{2/3}$. 
+monodromy scenario has a simple inflationary interpretation as a large field, slow roll
+model with a potential $V(\vp)\propto\vp^{2/3}$. 
 
 The tensor-scalar ratio and other observable quantities are
-significantly altered if the throat geometry changes, even in the case of the
+significantly altered if the throat geometry is not of the $AdS_5$ type, even in the case of the
 standard D3-brane model \cite{Gmeiner:2007uw}. In
-\Rref{Butti:2004pk} a one parameter family of solutions is given, which interpolates
+\Rref{Butti:2004pk}, a one parameter family of solutions was found, which interpolates
 between the
 Klebanov-Strassler (KS) \cite{ks} and Maldacena-Nu\~{n}ez
 \cite{Maldacena:2000yy} throats. As the throat geometry moves away from KS, more
-non-Gaussianity is produced but the tensor-scalar ratio is reduced.
+non-Gaussianity is produced whereas the tensor-scalar ratio is reduced.
 The choice of throat geometry, therefore, could have an affect on the bounds on $r$
 and must be considered when models are compared.
 
 
 
-The next set of models that can be considered are the single brane, multi field
-models. 
+The next class of models that can be investigated are the single brane, multi field
+configurations. 
 % 
-The warped throat is six-dimensional, so it is natural to consider the case where
+The warped throat is six-dimensional, so it is natural to consider cases where
 the D3-brane is not restricted to a radial trajectory. This was investigated in
 Refs.~\cite{spinflation} and \cite{Huang:2007hh}. Increasing the degrees of
-freedom in this way introduces the possibility of entropy mode production. There are
+freedom in this way introduces the possibility of entropy mode production. There are also
 changes in the predictions for the amount and type of non-Gaussianity produced
 and the constraints on $r$ can be eased \cite{Arroja:2008yy, Langlois:2009ej,
 Langlois:2008qf, Langlois:2008wt, Mizuno:2009mv, Mizuno:2009cv, RenauxPetel:2009sj}.
 %
 The bounds on $r$ could also be affected if a non-negligible part of the
-curvature perturbations was produced by a curvaton field \cite{Lyth:2001nq}.
-Curvaton fields arise generically for scenarios containing warped throats,
+curvature perturbation was produced by a curvaton field \cite{Lyth:2001nq}.
+Curvaton fields arise generically in scenarios containing warped throats,
 particularly for propagation near the tip \cite{Li:2008fm, Kobayashi:2009cm}. 
 % 
 % Differences in
@@ -1081,22 +1081,22 @@ particularly for propagation near the tip \cite{Li:2008fm, Kobayashi:2009cm}.
 
 Investigations have also been made into models with multiple branes, each of which
 has a single dynamical field. In Refs.~\cite{Cai:2008if} and \cite{Cai:2009hw}, no
-interactions between branes were considered, and the branes could conceivably be
-propagating in different throats. The action for $n$ decoupled branes in the
+interactions between branes were considered, and the branes could conceivably propagate in different
+throats. The action for $n$ decoupled branes in the
 relativistic limit is the sum of $n$ copies of the DBI action
 \eqref{eq:DBIaction-dbiintro}. The power spectrum of curvature perturbations is
-enhanced by a factor of $n^{3/2}$ with respect to the single brane case. The value
-of the tensor-scalar ratio will, therefore, be reduced. 
+enhanced by a factor of $n^{3/2}$ with respect to the single brane case. Consequently, the value
+of the tensor-scalar ratio will be reduced. 
 
 
 We have not yet addressed models with multiple branes but only one effective
-degree of freedom in total. Multiple M5-branes in M-theory act with an effective
-single degree of freedom but the Lyth bound is now significantly weakened and large
-field ranges and an observable tensor signal are possible \cite{Krause:2007jr}. 
-Another proposal is that of $n$ D3-branes which are coincident propagating in a
+degree of freedom. Multiple M5-branes in M-theory act with an effective
+single degree of freedom, but the Lyth bound is now significantly weakened. Large
+field ranges and an observable tensor signal are therefore possible \cite{Krause:2007jr}. 
+Another proposal is that of $n$ D3-branes which are coincident and propagating in a
 warped throat \cite{thomasward, hltw, Ward:2007gs, Berndsen:2009ww}. The
 non-Abelian nature of the interactions between the branes differentiates this model
-from other multi brane models and the model is also known as ``Matrix Inflation''.
+from other multi-brane models and the model is also known as ``Matrix Inflation''.
 In Chapter~\ref{ch:multibrane} we
 investigate this model in the relativistic limit
 for both large and small $n$, and show how the constraints derived in this
@@ -1113,7 +1113,7 @@ chapter can be applied.
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
-In this chapter we have derived an upper limit on
+In this chapter, we have derived an upper limit on
 the amplitude of the primordial gravitational wave spectrum
 generated during UV DBI inflation. We considered   
 the maximal inflaton field variation   
