--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % results.tex - Ian Huston
-% $Id: results.tex,v 1.29 2009/11/17 17:18:52 ith Exp $
+% $Id: results.tex,v 1.30 2009/11/20 14:57:13 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.29 2009/11/17 17:18:52 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: results.tex,v 1.30 2009/11/20 14:57:13 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -653,7 +653,7 @@ will increase the numerical complexity and the run-time of the code.
 
 For example, let us suppose that the second order perturbations of two scalar fields,
 $\vp$ and $\chi$, are to
-be calculated. Let $V$ denote the sum of the potentials for each field. As the
+be calculated. Let $V$ denote the potential and $V_0$ its background value. As the
 coding environment we have used can easily handle arrays of variables, it is useful
 to write the equations in vector form. The following definitions will be used:
 % 
@@ -662,42 +662,42 @@ to write the equations in vector form. The following definitions will be used:
  \bm{\vp_0} &= \begin{pmatrix}
                 \vp_0 \\
 		\chi_0
-               \end{pmatrix} \,,
+               \end{pmatrix} \,, &
 % 
- &\bm{\dvp1} = \begin{pmatrix}
+ \bm{\dvp1} &= \begin{pmatrix}
                 \dvp1 \\
 		\delta\chi_1
-               \end{pmatrix} \,,
+               \end{pmatrix} \,, &
 % 
- \bm{\dvp2} = \begin{pmatrix}
+ \bm{\dvp2} &= \begin{pmatrix}
                 \dvp2 \\
 		\delta\chi_2
-               \end{pmatrix} \,,& \\
+               \end{pmatrix} \,, \\
 % 
  \bm{V_1} &= \begin{pmatrix}
              \Uphi \\
-	     V_\chi 
-            \end{pmatrix} \,, 
+	     V_{,\chi} 
+            \end{pmatrix} \,, &
 % 
- &\bm{V_2} = \begin{pmatrix}
+ \bm{V_2} &= \begin{pmatrix}
              \Upp & V_{,\vp\chi} \\
 	     V_{,\chi\vp} & V_{,\chi\chi}
-            \end{pmatrix} \,, 
+            \end{pmatrix} \,, &
 % 
-\bm{V_3} = \begin{pmatrix}
+\bm{V_3} &= \begin{pmatrix}
             \Uppp & V_{,\vp\vp\chi} \\
 	    V_{,\vp\vp\chi} & V_{,\vp\chi\chi} \\
 	    V_{,\vp\chi\chi} & V_{,\chi\chi\chi}
-           \end{pmatrix} \,.&
+           \end{pmatrix} \,.
 \end{align}
 % 
 In conformal time the Friedmann equation becomes
 % 
 \begin{equation}
- \H^2 = \frac{8\pi G}{3} \left( \frac{1}{2}\vp_0'^2 + \frac{1}{2}\chi_0'^2 + a^2 \U
-\right) 
+ \H^2 = \frac{8\pi G}{3} \left( \frac{1}{2}\left(\vp_0'\right)^2 
+        + \frac{1}{2}\left(\chi_0'\right)^2 + a^2 \U \right) 
 % 
-= \frac{8\pi G}{3}\left( \frac{1}{2}\bm{\vp_0}'^{T} \bm{\vp_0}' + a^2 \U \right) \,,
+= \frac{8\pi G}{3}\left( \frac{1}{2} \left( \bm{\vp_0}' \right)^{T} \bm{\vp_0}' + a^2 \U \right) \,,
 \end{equation}
 % 
 where $\bm{\vp}^{T}$ denotes the transpose of $\bm{\vp}$.
@@ -709,14 +709,14 @@ The background vector equation of motion is given by
 \end{equation}
 % 
 where $\bm{0}$ is the zero vector.
-The first order vector equation is
+The first order vector equation takes the form
 % 
 \begin{multline}
  \bm{\dvp1}''(\kvi) + 2\H \bm{\dvp1}'(\kvi) \\
  + \left( k^2 \bm{1}  + \bm{V_2} 
  + \frac{8\pi G}{\H}\left\{ 
-  \bm{\vp_0}' \bm{V_1}^{T} + \bm{V_1}\bm{\vp_0}'^T
-  + \frac{8\pi G}{\H}\U \bm{\vp_0}' \bm{\vp_0}'^T
+  \bm{\vp_0}' \bm{V_1}^{T} + \bm{V_1}\left(\bm{\vp_0}'\right)^T
+  + \frac{8\pi G}{\H}\U \bm{\vp_0}' \left(\bm{\vp_0}'\right)^T
 \right\}
 \right)\bm{\dvp1}(\kvi) = \bm{0}\,,
 \end{multline}
@@ -724,17 +724,17 @@ The first order vector equation is
 where $\bm{1}$ is the identity matrix.
 
 We will outline the second order vector equation using the slow roll approximation.
-In the multi field case there are many more slow roll parameters than in the
-single field case. Extending the definition of $\bar{\varepsilon}_H$ in
+In the multi-field case there are many more slow roll parameters than in the
+single field scenario. Extending the definition of $\bar{\varepsilon}_H$ in
 \eq{eq:bareps-defn-perts} to two fields gives
 % 
 \begin{align}
  \bar{\varepsilon}_\vp &= \sqrt{4\pi G} \left( \frac{\vp_0'}{\H} \right) \,,\\
- \bar{\varepsilon}_\chi &= \sqrt{4\pi G} \left( \frac{\chi_0'}{\H} \right)\,,
+ \bar{\varepsilon}_\chi &= \sqrt{4\pi G} \left( \frac{\chi_0'}{\H} \right)\,.
 \end{align}
 % 
-and there are now four $\eta_H$ parameters corresponding to the different
-combinations of second derivatives of $V$. These can be written together in a matrix
+There are now four $\eta_H$-type parameters corresponding to the different
+combinations of second derivatives of $V$. These can be written together in matrix form
 as
 % 
 \begin{equation}
@@ -743,19 +743,19 @@ as
 % 
 where $I,J = \vp,\chi$.
 The magnitude of $\eta_{IJ}$ is only small in the adiabatic direction, so terms
-including $\eta_{IJ}$ are kept when making the slow roll approximation
+including $\eta_{IJ}$ are included when making the slow roll approximation
 \cite{Malik:2006ir}.
 
-The second order, slow roll, vector equation is 
+The second order, slow roll, vector equation for the perturbations is given by 
 % 
 \begin{align}
  \bm{\dvp2}''(\kvi) + 2\H\bm{\dvp2}'(\kvi) 
- + \left( k^2\bm{1} + a^2\bm{V_2} - 24\pi G \bm{\vp_0}' \bm{\vp_0}'^T \right)
+ + \left( k^2\bm{1} + a^2\bm{V_2} - 24\pi G \bm{\vp_0}' \left(\bm{\vp_0}'\right)^T \right)
        \bm{\dvp2}(\kvi)
  + \bm{S}(\kvi) = \bm{0}\,,
 \end{align}
 % 
-and the slow roll source term equation is
+where the slow roll source term equation is
 % 
 \begin{align}
 \label{eq:src-vector-res}
@@ -773,18 +773,19 @@ and the slow roll source term equation is
     \bm{\dvp1}^T(\pvi) \bm{V_2} \bm{\dvp1}(\qvi)
 \right) \bm{\vp_0}' \Bigg] \nonumber\\
 % 
-&+ \frac{16\pi G a^2}{\H}\left(\bm{\vp_0}'^T \bm{\dvp1}(\pvi) \right)
+&+ \frac{16\pi G a^2}{\H}\left(\left(\bm{\vp_0}'\right)^T \bm{\dvp1}(\pvi) \right)
     \bm{V_2} \bm{\dvp1}(\qvi) \nonumber \\
 % 
 &+ \frac{8\pi G}{\H} \Bigg[ 2\frac{p_l q^l}{q^2} 
-      \left(\bm{\vp_0}'^T \bm{\dvp1}'(\qvi) \right) \bm{\dvp1}'(\pvi)
- + 2p^2 \left(\bm{\vp_0}'^T \bm{\dvp1}(\qvi) \right) \bm{\dvp1}(\pvi) \nonumber \\
+      \left( \left(\bm{\vp_0}'\right)^T \bm{\dvp1}'(\qvi) \right) \bm{\dvp1}'(\pvi)
+ + 2p^2 \left( \left(\bm{\vp_0}'\right)^T \bm{\dvp1}(\qvi) \right) \bm{\dvp1}(\pvi) \nonumber \\
 % 
 &+\left( \frac{p_l q^l + p^2}{k^2}q^2 - \frac{p_l q^l}{2} \right) 
       \left( \bm{\dvp1}^T(\pvi) \bm{\dvp1}(\qvi) \right) \bm{\vp_0}' \nonumber \\
 % 
 &+\left(\frac{1}{2} -\frac{p_l q^l + q^2}{k^2}\right) 
-      \left( \bm{\dvp1}'^T(\pvi) \bm{\dvp1}'(\qvi) \right) \bm{\vp_0}' \Bigg] \Bigg\}
+      \left( \left(\bm{\dvp1}'\right)^T(\pvi) \bm{\dvp1}'(\qvi) \right) \bm{\vp_0}' \Bigg] \Bigg\}
+\,.
 \end{align}
 
 Following the method of Section~\ref{sec:eqs-num}, the $\d^3p$ integral is evaluated
@@ -824,13 +825,13 @@ definitions to obtain:
 \bm{\dvp1}(\qvi)\right) \bm{\vp_0}'
 	\Biggr] \nonumber \\
 % 
-&+ \frac{16\pi G}{\H}a^2 q^2 \left( \bm{\vp_0}'^T \bm{\A}(\kvi,\qvi) \right)
+&+ \frac{16\pi G}{\H}a^2 q^2 \left( \left(\bm{\vp_0}'\right)^T \bm{\A}(\kvi,\qvi) \right)
 	\bm{V_2}\bm{\dvp1}(\qvi) \nonumber \\
 % 
-&+ \frac{8\pi G}{\H} \Bigg[ 2\left( \bm{\vp_0}'^T \bm{\dvp1}'(\qvi) \right)
+&+ \frac{8\pi G}{\H} \Bigg[ 2\left( \left(\bm{\vp_0}'\right)^T \bm{\dvp1}'(\qvi) \right)
 	\left( kq \bm{\D}(\kvi,\qvi) - q^2 \bm{\C}(\kvi, \qvi) \right) \nonumber \\
 % 
-&\qquad +2q^2 \left( \bm{\vp_0}'^T \bm{\dvp1}(\qvi) \right)
+&\qquad +2q^2 \left( \left(\bm{\vp_0}'\right)^T \bm{\dvp1}(\qvi) \right)
 	\left( (k^2 + q^2)\bm{\A}(\kvi,\qvi) - 2kq\bm{\B}(\kvi, \qvi) \right)\notag\\
 % 
 &\qquad + \left(\left[ \frac{3}{2}q^4 \bm{\A}^T(\kvi,\qvi) 
@@ -843,7 +844,7 @@ definitions to obtain:
 \end{align}
 % 
 This expression for $\bm{S}$ reduces to \eq{eq:KG2-src-sr-aterms} when only one
-field is considered. At least in the slow roll case, the multi field source term
+field is considered. At least in the slow roll case, the multi-field source term
 equation is not considerably more complex than the single field one. The extra
 numerical complexity arises from the calculation of the new $\theta$
 dependent terms in \eq{eq:AtoD-vectors-res} and the increased memory cost this
