Changed to multi-field etc.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.63 2009/11/20 14:35:17 ith Exp $
+% $Id: dbi.tex,v 1.64 2009/11/20 15:33:25 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.63 2009/11/20 14:35:17 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.64 2009/11/20 15:33:25 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -1055,7 +1055,7 @@ and must be considered when models are compared.
 
 
 
-The next class of models that can be investigated are the single brane, multi field
+The next class of models that can be investigated are the single brane, multi-field
 configurations. 
 % 
 The warped throat is six-dimensional, so it is natural to consider cases where
