--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,14 +1,14 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.58 2009/11/10 12:02:23 ith Exp $
+% $Id: multibrane.tex,v 1.59 2009/11/20 15:33:25 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.58 2009/11/10 12:02:23 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.59 2009/11/20 15:33:25 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\chapter{Multi Coincident Brane Inflation}
+\chapter{Multi-Coincident Brane Inflation}
 \label{ch:multibrane}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -943,7 +943,7 @@ difficult to constrain this model when $N\gg n$.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-In the last section we introduced the multi coincident brane model in the limit
+In the last section we introduced the multi-coincident brane model in the limit
 of a finite number of branes. In this section we will consider this model in
 the context of the class of actions derived in Section~\ref{sec:relaxing-multi}
 and show that current observational data can strongly constrain the ability of
