--- a/numerical/numerical.tex
+++ b/numerical/numerical.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical.tex - Ian Huston
-% $Id: numerical.tex,v 1.48 2009/11/20 15:23:24 ith Exp $
+% $Id: numerical.tex,v 1.49 2009/11/20 15:33:25 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.48 2009/11/20 15:23:24 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: numerical.tex,v 1.49 2009/11/20 15:33:25 ith Exp $}
 % \input{numerical/paper3}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -1078,7 +1078,7 @@ I_{\wt{\D}} = -I_\B &-i\frac{\pi\alpha^2}{900\beta k^2}\Bigg\{ \nonumber \\
 % 
 The relative errors between the analytic and calculated values for $I_\B$,
 $I_{\wt{\C}}$ and $I_{\wt{\D}}$ are shown in Figure~\ref{fig:rel-bcd-num} for the
-three final $k$ ranges. The errors
+three final $k$ ranges with $\beta=10^_{-62}$. The errors
 for the $I_{\wt{\C}}$ and $I_{\wt{\D}}$ terms are very small, being of the order of
 $10^{-8}$ and $10^{-6}$, respectively. The relative error for the $I_\B$ term is
 larger, especially for small $k$ values. However, the error is still below $0.08\%$
@@ -1104,7 +1104,7 @@ compared with the analytic result.
 }%
 \caption[Relative errors for $I_\B$, $I_{\wt{\C}}$ and $I_{\wt{\D}}$]{The relative
 errors for $I_\B$,
-$I_{\wt{\C}}$ and $I_{\wt{\D}}$ for each of the $k$ ranges.}
+$I_{\wt{\C}}$ and $I_{\wt{\D}}$ for each of the $k$ ranges with $\beta=10^_{-62}$.}
 \label{fig:rel-bcd-num}
 \end{figure}
 
